--- a/sass/components_general/_site-nav.scss
+++ b/sass/components_general/_site-nav.scss
@@ -125,8 +125,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   padding-top: 48px;
   padding-left: 40px;
   padding-bottom: 48px;
@@ -139,6 +139,7 @@
     display: none;
   }
 }
+
 
 .menu-container.is-open {
   transform: translateX(0);
@@ -222,8 +223,6 @@
       content: '';
       top: 50%;
       width: 22px;
-      height: 1px;
-      background-color: rgba(33, 33, 33, 0.2);
       border: 1px solid rgba(33, 33, 33, 0.2);
       transform: rotate(90deg);
     }
