--- a/sass/components_index/_hero-index.scss
+++ b/sass/components_index/_hero-index.scss
@@ -2,7 +2,7 @@
 .hero {
 
   // height: 400px;
-  max-width: 1600px;
+  // max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   background-color: $background-color-added;
