--- a/sass/components_general/_contacts.scss
+++ b/sass/components_general/_contacts.scss
@@ -4,7 +4,7 @@
   @media (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     flex-direction: column;
-    margin-left: 96px;
+    margin-left: auto;
   }
 
   &__item:not(:last-child) {
