--- a/sass/components_general/_site-nav.scss
+++ b/sass/components_general/_site-nav.scss
@@ -123,13 +123,13 @@
 .menu-container {
   background-color: $primary-background-color;
   position: fixed;
+  flex-direction: column;
+  display: flex;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding-top: 48px;
-  padding-left: 40px;
-  padding-bottom: 48px;
+  width: 100%;
+  height: 100%;
+  padding: 48px 40px;
   z-index: 999;
 
   transform: translateX(100%);
@@ -152,7 +152,9 @@
 }
 
 .menu-nav {
-  margin-bottom: 302px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: auto;
 
   &__item:not(:last-child) {
     padding-bottom: 32px;
@@ -179,7 +181,10 @@
 }
 
 .menu-contacts {
-  margin-bottom: 64px;
+  display: flex;
+    flex-direction: column;
+    margin-bottom: auto;
+
 
   &__item:not(:last-child) {
     padding-bottom: 32px;
@@ -204,7 +209,13 @@
 }
 
 .social-nav {
-  display: inline-flex;
+  
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  flex-wrap: wrap;
+  margin-left: auto;
+  margin-right: auto;
 
   &__item:not(:last-child) {
     padding-right: 20px;
