--- a/sass/utils/_form-in-modal.scss
+++ b/sass/utils/_form-in-modal.scss
@@ -44,9 +44,9 @@
     transition: border-color 250ms $timing-function;
   }
   &__feedback {
-    padding: 12px 16px;
+    padding: 12px 16px 0 16px;
     resize: none;
-    height: 120px;
+    max-height: 120px;
 
 
     &::placeholder {
@@ -106,15 +106,7 @@
     position: relative;
     color: $logo-button-text-color;
     text-decoration: none;
-
-    &::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: 1px;
-      width: 100%;
-      height: 1px;
-      background-color: $logo-button-text-color;
-    }
-  }
+    border-bottom: 1px solid $logo-button-text-color;
+    padding-bottom: 1px;
+}
 }
