--- a/sass/utils/_modal-window.scss
+++ b/sass/utils/_modal-window.scss
@@ -17,7 +17,7 @@
 
 .modal {
   position: absolute;
-  top: 55%;
+  top: 50%;
   left: 50%;
   width: 450px;
   height: 609px;
@@ -27,6 +27,10 @@
 
   transform: scale(1) translate(-50%, -50%);
   transition: transform 250ms $timing-function;
+
+  @media (max-width:767px) {
+      width: calc(100% - 2 * 15px);
+  }
 
   @media (min-width: 769px) {
     width: 528px;
