changed margin in header

--- a/css/main.css
+++ b/css/main.css
@@ -409,7 +409,7 @@ img {
 
 @media (min-width: 1200px) {
   .contacts {
-    margin-left: 315px;
+    margin-left: auto;
   }
 }
 @media screen and (max-width: 767px) {
