--- a/css/main.css
+++ b/css/main.css
@@ -1146,7 +1146,6 @@ img {
   border-right: 1px solid #eeeeee;
 }
 .portfolio__link {
-  position: relative;
   text-decoration: none;
   display: block;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1201,8 +1200,8 @@ img {
   font-weight: 400;
   line-height: 1.56;
   color: #ffffff;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1219,13 +1218,8 @@ img {
   }
 }
 
-@media (max-width: 1199px) {
-  .portfolio__link:focus .portfolio__description {
-    -webkit-transform: translateY(0%);
-            transform: translateY(0%);
-  }
-}
-.portfolio__link:hover .portfolio__description {
+.portfolio__link:hover .portfolio__description,
+.portfolio__link:focus .portfolio__description {
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
 }
